# localization_navigation

./: CMakeLists.txt  LICENSE  README.md  create_x64_msvc_prebuilt_3rdparty.bat  create_x86_msvc_prebuilt_3rdparty.bat
cmake/: FindG2O.cmake  prebuilt.cmake
dataset/keyframe/: AfterOptimize.g2o  KeyFrame.xml  cam.ply  g2o_linkbreak_.ply  groundplane.xyz
src/: CMakeLists.txt
src/2DMapGeneration/: CMakeLists.txt  main.cpp
src/Localization/: CMakeLists.txt  KeyFrameSimple.cpp  KeyFrameSimple.h  Localization.cpp  Localization.h  cDataStructure.h  cLocalization.cpp  cLocalization.h  cORBExtractor.cpp  cORBExtractor.h  cPose.cpp  cPose.h  cRansac.h  cTransformationType.h
src/PathPlanning/: AStar.cpp  AStar.h  CMakeLists.txt  Node.cpp  Node.h  PathAlgorithm.h  PathFinder.h  PathPlanning.cpp  PathPlanning.hpp
src/RSWrapper/: CMakeLists.txt  RSWrapper.cpp  RSWrapper.h
src/TreeGeneration/: CMakeLists.txt  main.cpp
src/common/: cBasic.h  cCommon.h  cVisualization.cpp  cVisualization.h
tests/: CMakeLists.txt
tests/test_Localization/: CMakeLists.txt  main.cpp
tests/test_PathPlanning/: CMakeLists.txt  main.cpp
